# MoviePilot

./: .pylintrc  AGENTS.md  moviepilot  requirements.in  test_openai_copilot_patch.py  test_openai_responses_patch3.py  test_openai_stream_patch.py  version.py
app/: cli.py  command.py  log.py  main.py  monitor.py  scheduler.py
docs/: cli.md  development-setup.md  postgresql-setup.md  testing.md
rust/moviepilot_rust/: Cargo.toml
rust/moviepilot_rust/src/: filter.rs  indexer.rs  lib.rs  metainfo.rs  rss.rs  utils.rs
scripts/: benchmark_filter_torrents_rust.py  bootstrap-local.sh  local_setup.py  uv-pip-compat.sh
tests/: test_agent_background_output.py  test_agent_interaction.py  test_agent_plugin_tools.py  test_agent_prompt_style.py  test_agent_subagents.py  test_agent_summarization_streaming.py  test_agent_tool_selector_middleware.py  test_agent_tool_streaming.py  test_alist_storage.py  test_data_cleanup_chain.py  test_episode_format_helper.py  test_event_transfer_normalization.py  test_feishu.py  test_indexer_spider_search_url.py  test_llm_provider_registry.py  test_local_setup_llm_provider_prompt.py  test_media_recognize_share.py  test_mediascrape.py  test_mediaserver_tv_stale_itemid.py  test_nexus_audiences_parser.py  test_plex_image_lookup.py  test_postgresql_socket_config.py  test_rust_accel.py  test_security_utils.py  test_skills_command.py  test_system_llm_test.py  test_system_nettest.py  test_telegram.py  test_telegram_typing_lifecycle.py  test_tmdb_recognize.py  test_tmdb_response_cache.py  test_torrent_filter.py  test_transfer_job_manager.py  (+3 more)
(+93 files in other folders)
