[package]
name = "moviepilot-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "moviepilot_rust"
crate-type = ["cdylib"]

[dependencies]
anitomy-pure = "0.1"
fancy-regex = "0.14"
inputx-pinyin = "1.0.2"
minijinja = "2.20"
chrono = "0.4"
once_cell = "1.20"
pyo3 = { version = "0.23", features = ["abi3-py311", "extension-module"] }
quick-xml = "0.38"
regex = "1.11"
scraper = "0.24"
url = "2.5"
